syntax = "proto3";

option csharp_namespace = "GrpcTgBot";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetToken (LoginRequest) returns (LoginResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message LoginRequest {
	string name = 1;
	string pwd = 2;
}

message LoginResponse {
	string jwt = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
